syntax = "proto3";
package common_v1;

enum Queue {
  //PRODUCT
  PRODUCT_CREATED = 0;
  PRODUCT_UPDATED = 1;
  PRODUCT_DELETED = 2;

  // COMMERCE
  CART_CREATED = 3;
  CART_UPDATED = 4;

  // USER
  USER_CREATED = 5;
  USER_UPDATED = 6;
  USER_LOGIN = 7;
  USER_LOGOUT = 8;

  // EVENT
  EVENT_CREATED = 9;

  // PAYMENT
  PAYMENT_ORDER_CREATED = 10;
  PAYMENT_ORDER_DELAYED_CANCELLED = 11;
}